--- a/.env.example
+++ b/.env.example
@@ -23,8 +23,9 @@ REDIS_DB=0
 # Ollama AI Configuration
 OLLAMA_HOST=ollama
 OLLAMA_PORT=11434
-OLLAMA_MODEL=deepseek-coder:6.7b
-OLLAMA_TIMEOUT=300
+#OLLAMA_MODEL=deepseek-coder:6.7b
+OLLAMA_MODEL=gpt-oss:20b
+OLLAMA_TIMEOUT=600
 
 # Bricks System Configuration
 BRICKS_PER_TOKEN=100
