--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
+    "marked": "^16.4.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-i18n": "^9.14.5",
