add nginx config

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -3,7 +3,7 @@
 
 server {
     listen 80;
-    server_name localhost wall.cyka.lol;
+    server_name wall.cyka.lol;
     root /var/www/html/public;
     index index.html api.php;
 
