--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     image: nginx:alpine
     container_name: wall_nginx
     ports:
-      - "8080:80"
-      - "443:443"
+      - "80:80"       # Production HTTP
+      - "443:443"     # Production HTTPS
     volumes:
       - ./nginx/conf.d:/etc/nginx/conf.d
       - ./public:/var/www/html/public
@@ -49,7 +49,7 @@ services:
     image: mysql:8.0
     container_name: wall_mysql
     ports:
-      - "3306:3306"
+      - "3308:3306"   # External port 3308 to avoid conflict with host MySQL
     environment:
       MYSQL_ROOT_PASSWORD: root_password_change_in_production
       MYSQL_DATABASE: wall_social_platform
@@ -73,7 +73,7 @@ services:
     image: redis:alpine
     container_name: wall_redis
     ports:
-      - "6379:6379"
+      - "6378:6379"   # External port 6378 to avoid conflict with host Redis
     volumes:
       - redis_data:/data
     command: redis-server --appendonly yes
@@ -91,7 +91,7 @@ services:
     image: ollama/ollama:latest
     container_name: wall_ollama
     ports:
-      - "11434:11434"
+      - "11435:11434"  # External port 11435 to avoid potential conflicts
     volumes:
       - ollama_data:/root/.ollama
     environment:
