--- a/nginx/conf.d/production.conf
+++ b/nginx/conf.d/production.conf
@@ -155,7 +155,7 @@ server {
     # ============================================================================
     
     # SSE endpoints for AI generation progress and live updates
-    location ~ ^/api/v1/(ai/jobs/[^/]+/status|queue/live|conversations/[^/]+/live)$ {
+    location ~ ^/api/v1/(ai/generation/[^/]+/(progress|content)|ai/jobs/[^/]+/status|queue/live|conversations/[^/]+/live)$ {
         # Pass to PHP-FPM
         try_files $uri /api.php?$query_string;
         
@@ -187,11 +187,19 @@ server {
     # ============================================================================
     
     # Long-term caching for static assets (30 days)
-    location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
+    # BUT use ETag for cache validation to allow updates
+    location ~* \.(jpg|jpeg|png|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 30d;
         add_header Cache-Control "public, immutable";
         access_log off;
         log_not_found off;
+    }
+    
+    # Shorter cache for JS/CSS with validation (allow updates)
+    location ~* \.(js|css)$ {
+        expires 7d;
+        add_header Cache-Control "public, must-revalidate";
+        etag on;
     }
 
     # ============================================================================
