--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -14,7 +14,7 @@ server {
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
     # Content Security Policy for AI-generated apps
-    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self'; frame-ancestors 'self';" always;
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https: blob:; font-src 'self' data:; connect-src 'self'; frame-ancestors 'self';" always;
 
     # Client body size for media uploads (50MB)
     client_max_body_size 50M;
